# crc-hamming-weights

./: CMakeLists.txt  LICENSE.md  README.md
include/crcham/: codeword.hpp  compute.hpp  crc.hpp  cuda.hpp  evaluator.hpp  fixed_width_buffer.hpp  fixed_width_integer.hpp  integer_operations.hpp  kernels.hpp  math.hpp  operations.hpp  permute.hpp
src/: codeword.cu  compute.cu  crc.cu  cuda.cpp  cuda.cu  evaluator.cu  fixed_width_buffer.cu  fixed_width_integer.cu  integer_operations.cu  kernels.cu  main.cpp  main.cu  math.cu  operations.cu  permute.cu
src/crcham/: fixed_width_buffer.cu  fixed_width_integer.cu
test/: all_tests.hpp  main.cu  test_codeword.cu  test_codeword.hpp  test_crc.cu  test_crc.hpp  test_fixed_width_buffer.cu  test_fixed_width_integer.cu  test_permute.cu  tests.hpp
